<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="198dp"
        android:layout_height="226dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:contentDescription="@string/resultImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/winimage" />

    <Button
        android:id="@+id/endResultButton"
        android:layout_width="169dp"
        android:layout_height="75dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:text="@string/endResultButton"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer4" />

    <TextView
        android:id="@+id/questionView"
        android:layout_width="352dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/questionText"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultImage" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="5dp"
        android:text="@string/answer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionView" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="5dp"
        android:text="@string/answer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="5dp"
        android:text="@string/answer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="5dp"
        android:text="@string/answer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3" />
</android.support.constraint.ConstraintLayout>